2002-05-13  Dave Love  <fx@gnu.org>

	* international/mule-conf.el: Speling fixes.

2002-05-13  Kenichi Handa  <handa@etl.go.jp>

	* international/fontset.el (fontset-plain-name): Handle the case
	that size, weight, slant are not specified in the fontset name.

2002-05-10  Yong Lu <lyongu@asia-infonet.com>

	* language/greek.el (greek-iso-8bit): Fix typo.

2002-05-10  Kenichi Handa  <handa@etl.go.jp>

	* language/chinese.el (chinese-big5): Change :coding-type to
	`charset'.

2002-05-09  Kenichi Handa  <handa@etl.go.jp>

	* international/characters.el: Change encoding to utf-8-emacs.
	Remove apparent duplicate codes.

2002-05-07  Kenichi Handa  <handa@etl.go.jp>

	* international/fontset.el: Change the registry for
	chinese-gb2312 and add the registry for chinese-gbk.

	* international/mule.el (charset-chars): Fix typo.

	* international/mule-conf.el (chinese-gbk): New charset.

	* international/titdic-cnv.el (titdic-convert): Read into a
	unibyte buffer then make the buffer multibyte.

2002-03-07  Kenichi Handa  <handa@etl.go.jp>

	* international/mule-conf.el (utf-16-le): Use :bom attribute
	instead of :signature.
	(utf-16-be): Likewise.

2002-03-05  Kenichi Handa  <handa@etl.go.jp>

	* language/czech.el ("Czech"): Set `iso-8859-2' for
	`nonascii-translation'.

	* language/romanian.el ("Romanian"): Likewise.

	* language/slovak.el ("Slovak"): Likewise.

	* international/characters.el: Optimize calls of
	modify-category-entry.

2002-03-01  Kenichi Handa  <handa@etl.go.jp>

	* bindings.el: Don't bind multibyte characters to
	self-insert-command here.  It's done in mule-conf.el

	* case-table.el (set-case-syntax-offset): Variable deleted.
	(set-case-syntax-1): Function deleted.  Callers changed.
	(set-case-syntax-delims): Don't check byte length of characters.

	* isearch.el (isearch-mode-map): Call set-char-table-range to bind
	characters to isearch-printing-char.

	* loadup.el: Don't load "international/utf-8".  Don't call